Fixed layout issues in Microsoft Edge

--- a/src/app/frontend/deploy/createsecret.scss
+++ b/src/app/frontend/deploy/createsecret.scss
@@ -14,6 +14,10 @@
 
 @import '../variables';
 
+.kd-create-secret-dialog {
+  min-width: $layout-breakpoint-xs;
+}
+
 .kd-secret-data {
   overflow-y: scroll;
 }
