--- a/src/app/frontend/replicationcontrollerdetail/sortedheader.scss
+++ b/src/app/frontend/replicationcontrollerdetail/sortedheader.scss
@@ -12,8 +12,10 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
+@import '../variables';
+
 .kd-replicationcontroller-detail-table-header-button {
-  background: inherit;
+  background-color: $content-background;
   border: 0;
   color: inherit;
   padding: 0;
